# rust_chat

./: Cargo.toml  install.sh
src/: config.rs  main.rs
src/app/: app.rs  app_error.rs  client.rs  common_errors.rs  handlers.rs  mod.rs  room.rs
src/misc/: app_error.rs  command.rs  date_serde.rs  log.rs  mod.rs  option_ext.rs  query_params.rs  response.rs  string_ext.rs
src/model/: message.rs  mod.rs  params.rs  participant.rs  request.rs  response.rs  room.rs  room_info.rs  text_room_event.rs  text_room_request.rs  text_room_response.rs
src/model/params/: create_params.rs  destroy_params.rs  join_params.rs  last_announcement_params.rs  mod.rs  photo_params.rs
src/service/: chat_service.rs  client_service.rs  mod.rs  rest_client.rs  room.rs  room_service.rs  service_error.rs
