[package]
name = "rust_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
routerify = "3.0.0"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
querystring = "1.1.0"
futures = "0.3.28"
log = "0.4.20"
hyper-tungstenite = "0.11.1"

