[package]
name = "rust_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
querystring = "1.1.0"
hyper-tungstenite = "0.14.0"
urlencoding = "2.1.3"
futures = "0.3.30"
hyper-tls = "0.6.0"

