[package]
name = "rust_chat"
version = "0.1.0"
edition = "2021"

# https://github.com/johnthagen/min-sized-rust#readme
[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
querystring = "1.1.0"
urlencoding = "2.1.3"
futures = "0.3.30"
hyper-tls = "0.6.0"
tokio-util = "0.7.11"
bytes = "1.7.1"
axum = { version = "0.7.5", features = ["ws"] }

